Pull request #1281: fix scroll
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 50803eb92a3f03a0cff54e4aeb82e76187085930
Merge: f6fafc919 9c425f8a2
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Jun 27 17:53:31 2022 +0300

    merge

commit f6fafc919d39235a3093baacc07d3a574702bad1
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Jun 27 16:09:32 2022 +0300

    AG-14504 fix scroll

--- a/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
+++ b/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
@@ -2,6 +2,7 @@
     display: flex;
     max-width: 100%;
     height: 100%;
+    overflow: hidden;
 
     * {
         box-sizing: border-box;
